# access-moppy-qc-registry

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  propose_check.yml  request_variable_check.yml
.github/workflows/: build_dashboard.yml  validate_registry.yml
checks/: data.yaml  data_integrity.yaml  global_stats.yaml  metadata.yaml  ref.yaml  spatial.yaml  temporal.yaml
dashboard/: app.js  index.html  style.css
inventory/: catalog.yaml
requirements/: global.yaml  wcrp.yaml
requirements/experiments/: piControl.yaml
requirements/variables/: siconc.yaml  tas.yaml  tos.yaml
schemas/: check.schema.json  requirement.schema.json  wcrp.schema.json
scripts/: compile_registry.py  validate_schema.py
