[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "access-moppy-qc-registry"
version = "0.1.0"
description = "QC check catalogue and requirements registry for ACCESS-MOPPy"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
compile-registry = "scripts.compile_registry:main"
validate-registry = "scripts.validate_schema:main"
